<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_title">
        <ListPreference
            android:defaultValue="3"
            android:entries="@array/levelsArray"
            android:entryValues="@array/levelsValues"
            android:key="boardsize"
            android:summary="Choose the size of the board"
            android:title="Board size" />
        <SwitchPreference
        android:key="movalido"
        android:defaultValue="true"
        android:summary="@string/settings_mov_sumary"
        android:title="@string/settings_mov_title" />
        <CheckBoxPreference
            android:key="music"
            android:summary="Click if you feel like listening to music"
            android:title="Music" />
    </PreferenceCategory>
</PreferenceScreen>