<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <EditText
        android:id="@+id/reg_pass"
        android:layout_width="224dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/field_pass"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/reg_username"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/reg_username" />

    <EditText
        android:id="@+id/reg_passc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/field_passc"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/reg_pass"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/reg_pass"
        android:layout_marginLeft="0dp" />

    <Button
        android:id="@+id/reg_button"
        android:layout_width="219dp"
        android:layout_height="48dp"
        android:layout_marginTop="18dp"
        android:text="Registro"
        app:layout_constraintLeft_toLeftOf="@+id/reg_mostrar"
        app:layout_constraintTop_toBottomOf="@+id/reg_mostrar"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <CheckBox
        android:id="@+id/reg_mostrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_pass"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/reg_passc"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/reg_passc" />

    <EditText
        android:id="@+id/reg_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/field_nick"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="57dp"
        android:layout_marginTop="54dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="57dp" />

</android.support.constraint.ConstraintLayout>